<resources>
    <string name="app_name">Homework Log - Dummy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Log</string>
    <string name="input_fragment_label">New Assignment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hint_subject">Subject</string>
    <string name="hint_other_notes">Other Notes</string>
    <string name="hint_task">Task</string>
    <string name="hint_due_date">Due Date:</string>
    <string name="confirm">confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_assignments">current assignments</string>
    <string name="completed_assignments">completed assignments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>